syntax = "proto3";

package apis;

option go_package = "github.com/EGT-Ukraine/go2gql/tests/dataloader/generated/clients/apis;apis";

service UserService {
    rpc List (UserListRequest) returns (UserListResponse) {}
}

message UserListRequest {
    repeated int64 id   = 1;
}

message UserListResponse {
    repeated User users = 1;
}

message User {
    int64 id            = 1;
    string name         = 2;
}
